styles.css
*, *:before, *:after {
    box-sizing: border-box;
}
head {
    height: 0;
}
body {
    height: 100vh;
    margin: 0;
    padding: 0;
    overflow: auto;
    border: unset;
}
div.row { /* us-14 */
    width: 100%;
    margin: -3rem 0 0 0;
    padding: 3rem 0 0 0;
    border: none;
}
div.col-one {
    margin: 0rem 0 3rem 0;
    padding: 0em 0 0 0;
    width: auto;
}
div.col-two {
    border: solid black;
    border-width: 0 0 0 medium;
    margin: 0 0 0 0;
    padding: 0 0 0 0;
}
main {
    padding: 1rem;
    margin: -3rem 0 0 -3rem;
}
section {
    display: block;
    margin: 0.5rem 0.5rem 0.5rem 1rem;
    padding: 0;
}
section > p {
    margin: 1rem 1rem 2rem 3rem;
}
main h3, main h4 {
    padding: none;
    margin: none;
}
section > header {
    padding: -1em 1em 1em 2em;
    margin: -1rem 1rem 0 2rem;
}
article {
    padding: 0;
    margin: 1rem 1rem 0 2rem;
}
article h3 {
    margin: -1rem 1rem -1rem 2rem;
}
article h4 {
    padding: 0em 0 0em 0em;
    margin: 0;
}
nav {
    justify-content: space-evenly;
    align-items: center;
    font-size: 1.0rem;
    text-align: center;
    margin: none;
    padding: none;
}
nav > header {
    display: block;
    margin: 1em 0 1em 0;
    padding: 1em 0 1em 0;
    border: solid black;
    border-width: 0 0 medium 0;
}
nav a {
    font-weight: bold;
    color: blue;
    text-decoration: none;
    display: block;
    border: solid black;
    border-width: 0 0 thin 0;
    margin: 0 0 0 0;
    padding: 1em 1em 1em 1em;

}
section header {
    display: block;
    margin: -1rem 0rem -1rem 0rem;
    padding: 1rem 0rem 1rem 2rem;
    font-size: larger;
    font-weight: bold;
}
section p {
    margin: 0 0 0 5rem;
}

/* Wide screen -> 2-column, left column vertical scroll bar */
@media (min-width: 850px) {
    div.row { /* us-14 */
       display: flex;
       flex-direction: row; 
    }
    div.row div.col-one {
        flex-direction: column; /* 1 */
        order: 1;
        height: 100%; /* 2 */
        width: 100vw;
        margin: -2rem 0 0 0;
        overflow: scroll; /* 3 */
        position: sticky;
    }
    div.row div.col-two {
        order: 2;
        margin: 3rem 0 0 0;
    }
}
article h3 {
    display: block;
    margin: 3rem 1rem 1rem 1rem;
}
article h4 {
    margin: 3em 1em 0em 2em;
}

article ul {
    margin: 0;
    padding: 0;
}
article li {
    margin: 0;
    padding: 0;
}
article pre {
    display: block;
    background-color: black;
    color: yellow;
    margin: -1rem 1rem;
    padding: 1rem;
}
code {
    display: inline-block;
    background-color: black;
    color: yellow;
    padding: 1em  1em;
    margin: 1em 0 1em 3em;
}
article p {
    margin: 1em 1em 1em 3em;
}
article aside {
    margin: 2rem 1rem 1rem 1rem;
    font-style: italic;
}
article label {
    display: block;
    margin-top: 1rem;
}
article div {
    margin-top: 2em;
}
#event-div {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: green;
    width: 8rem;
    height: 4rem;
}
footer {
    border-width: 1px;
    border-color: blue;
    margin: 1em;
}
footer label {
    display: block;
}

